2004-09-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/Makefile.am:
	* data/glade/http.glade:
	  add UI for http component

2004-09-14  Johan Dahlin  <johan@gnome.org>

	* flumotion/manager/worker.py (WorkerHeaven): Clean up, almost
	ready for general consumption

	* flumotion/manager/component.py (ComponentAvatar.getListenHost):
	Support new and old twisted code for getting the host

	* flumotion/manager/admin.py (AdminAvatar):
	I don't implement IHeaven, really.

	* flumotion/manager/main.py: New file, currently unused

	* flumotion/common/config.py (ConfigEntry.getWorker): 
	Add dummy getWorker() method

	* testsuite/tests/log.py (TestLog.testLogHandlerAssertion): Add test

	* flumotion/utils/log.py (addLogHandler): Doc fix, add pedantic
	assertion.

2004-09-13  Johan Dahlin  <johan@gnome.org>

	* conf/minmal.xml: add a minimal configuration for testing purposes.

2004-09-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	* flumotion/utils/log.py:
	* testsuite/tests/log.py:
	  add tests for logging

2004-09-13  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/bundle.py:
	* flumotion/component/component.py:
	* flumotion/component/http/http_gui.py:
	* flumotion/manager/component.py:
	* flumotion/manager/manager.py:
	* flumotion/manager/worker.py:
	* testsuite/tests/bundle.py:
	
	Documentation updates. Bundle fixes.
	
2004-09-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/Makefile.am:
	* flumotion/common/Makefile.am:
	* flumotion/component/Makefile.am:
	* flumotion/config/Makefile.am:
	* flumotion/manager/Makefile.am:
	* flumotion/twisted/Makefile.am:
	* flumotion/utils/Makefile.am:
	* flumotion/worker/Makefile.am:
	  adding ctags generation

2004-09-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	* flumotion/manager/component.py:
	  remove depreciation warnings

2004-09-12  Thomas Vander Stichele  <thomas at apestaart dot org>
